--- a/Aakrithi.html
+++ b/Aakrithi.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="topnav">
-        <a href="home code.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Aakrithi.html">Aakrithi</a>
         <a href="Aditya.html">Aditya</a>
         <a href="Aparna.html">Aparna</a>
