--- a/Aparna.html
+++ b/Aparna.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="topnav">
-        <a href="home code.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Aakrithi.html">Aakrithi</a>
         <a href="Aditya.html">Aditya</a>
         <a href="Aparna.html">Aparna</a>
@@ -67,7 +67,7 @@
     <div>
         <address>
             <h1>Usefule links</h1><br>
-            <a href="home code.html">Home</a><br>
+            <a href="index.html">Home</a><br>
             <a href="Aakrithi.html">Aakrithi</a><br>
             <a href="Aditya.html">Aditya</a><br>
             <a href="Aparna.html">Aparna</a><br>
