--- a/Aakrithi.html
+++ b/Aakrithi.html
@@ -74,7 +74,7 @@
 <div>
     <address>
         <h1>Usefule links</h1><br>
-        <a href="home code.html">Home</a><br>
+        <a href="index.html">Home</a><br>
         <a href="Aakrithi.html">Aakrithi</a><br>
         <a href="Aditya.html">Aditya</a><br>
         <a href="Aparna.html">Aparna</a><br>
